dnl Process this file with autoconf to produce a configure script.
AC_INIT(pkg/prototype.in)

AC_SUBST(solpkg_topdir)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_ARG_WITH(topdir,
[  --with-topdir	Solaris pkgtools top directory.],
[solpkg_topdir="$with_topdir"],
[solpkg_topdir="/usr/solpkg"])

dnl Checks for library functions.

AC_OUTPUT(Makefile 
	mk/port.mk mk/solpkg.conf)
