dnl Process this file with autoconf to produce a configure script.
AC_INIT(pkg/prototype.in)

AC_SUBST(soap_topdir)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_ARG_WITH(topdir,
[  --with-topdir	Solaris pkgtools top directory.],
[soap_topdir="$with_topdir"],
[soap_topdir="/usr/pkg"])

dnl Checks for library functions.

AC_OUTPUT(Makefile 
	mk/port.mk mk/soap.conf)
