dnl Process this file with autoconf to produce a configure script.
AC_INIT(version.mk)

AC_SUBST(solarpack_topdir)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_ARG_WITH(topdir,
[  --with-topdir	Solaris APDK top directory.],
[solarpack_topdir="$with_topdir"],
[solarpack_topdir="/usr/pkg"])

dnl Checks for library functions.

AC_OUTPUT(Makefile 
	mk/port.mk mk/port.pre.mk mk/port.subdir.mk mk/solarpack.conf)
